# flexcraft

./: .gitignore  .gitignorees  README.md  download_params.sh  pyproject.toml  setup.sh
data/grafting/: C4_centers.csv  C4_centers_bundle.csv  pseudo_centers.csv
data/o1_iptm_scoring/: annotation.json  fig13_ids.json
docs/: pipeline_binder.md  pipeline_motif.md
flexcraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flexcraft/data/: block.py  data.py
flexcraft/files/: __init__.py  csv.py  fasta.py  pdb.py
flexcraft/hallucination/: opt.py  transform.py
flexcraft/hallucination/losses/: distogram.py  sequence.py
flexcraft/pipelines/: .___init__.py  ._binder.py  af2_predict.py  binder.py  collect_success.py  denovo.py
flexcraft/pipelines/ambigen/: tag.py
flexcraft/pipelines/bind/: __init__.py  __main__.py  common.py  config.py  hunter.py  mosaic.py  partial.py  scan.py  search.py
flexcraft/pipelines/experimental/: af2_data.py  cavity.py  flip.py  landscape.py
flexcraft/pipelines/graft/: __init__.py  common.py  general.py  options.py  simple.py  surface_peptides.py
flexcraft/pipelines/order/: codon_optimize.py  scramble.py  select.py
flexcraft/pipelines/psp/: boltz.py  product.py  slice.py
flexcraft/pipelines/utils/: __init__.py  salad.py
flexcraft/protocols/: ._bindcraft_filter.py  AbsciBind.py  __init__.py  af2cycler.py  bindcraft_filter.py  search.py
flexcraft/rosetta/: interface_analyzer.py  relax.py  surface.py
flexcraft/sequence/: aa_codes.py  mpnn.py  sample.py
flexcraft/structure/: af.py  af_old.py
flexcraft/structure/_colab_af/: LICENSE  README  (+3 more)
flexcraft/tools/: boltz.py
flexcraft/utils/: __init__.py  dict_utils.py  io.py  options.py  rng.py
notebooks/abscibind/: iptm_scoring_analysis.ipynb  spr-controls_selection.ipynb
notebooks/boltzCaching/: devel.ipynb
scripts/: run_boltz.sh  simple_salad.py  test_hal.py
tests/: abscibind.py  abscibind_job.sh  abscibind_job_parallel.sh  test_abscibind.py  test_abscibind_fig13.py  test_lrmsd.py  test_origin1_iptm.py
(+33 files in other folders)
