[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flexcraft"
version = "0.0.2"
description = "Glue code for plugging together different protein design models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["protein", "machine learning", "jax"]
authors = [{ name = "Michael A. Jendrusch", email = "michael.jendrusch@embl.de" }]
maintainers = [{ name = "Michael A. Jendrusch", email = "michael.jendrusch@embl.de" }]

classifiers = [

]

dependencies = [
    "salad @ git+https://github.com/mjendrusch/salad.git",
    "ml-collections>=1.1.0"
]

[project.optional-dependencies]
joltz = [
    "joltz @ git+https://github.com/nboyd/joltz.git",
    "torch>=2.3.1",
    "equinox>=0.13.5",
]

[project.urls]
"Homepage" = "https://github.com/mjendrusch/flexcraft"
"Bug reportes" = "https://github.com/mjendrusch/flexcraft/issues"
"Source" = "https://github.com/mjendrusch/flexcraft/"

[tool.setuptools.packages.find]
include = ["flexcraft*"]
exclude = ["data*"]
